[package]
name = "thinbasic_rusty"
version = "0.1.0"
authors = ["petrSchreiber <petrschreiber@gmail.com>"]

[dependencies]
libloading = "0.5"
winapi = { version = "0.3", features = ["winnt", "combaseapi", "oleauto", "roapi", "roerrorapi", "hstring", "winstring", "winerror", "restrictederrorinfo"] }
ascii = "0.8.6"

[lib]
name = "thinbasic_rusty"
crate-type = ["cdylib"]

